Updates people profile thumb implementation for spacing issues

--- a/docroot/sites/all/themes/ilr_theme/scss/base/_mixins.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/base/_mixins.scss
@@ -400,4 +400,5 @@
   @include set-link($underline: true, $underline-color: $cornell-red);
 
   font-weight: 600;
+  display: inline-block;
 }
