--- a/docroot/sites/all/themes/ilr_theme/scss/components/_people_profile_thumb.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_people_profile_thumb.scss
@@ -15,7 +15,8 @@ body.page-taxonomy-term .view-areas-expertise-taxonomy-term {
   article {
     @include thumb;
 
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 5%;
 
     h2 {
       @include set-heading(false);
@@ -27,12 +28,14 @@ body.page-taxonomy-term .view-areas-expertise-taxonomy-term {
       }
     }
 
+    .people-profile__content {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
     .field {
       @include adjust-font-size-to(16px);
-      line-height: 1.2;
-      grid-column: 2;
-      margin-bottom: -0.5rem; // Improves line spacing between fields
-
+      line-height: 1.1;
 
       &.field-type-image {
         grid-column: 1;
